--- a/main.html
+++ b/main.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content= "width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles.css">
+	<title>Why Sfotware?</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer?</h1>
+	<p>
+		I want to become a developer because of time growing fast with the help of new technologies like- AI, chatGPt, Programming and in tech field there is so many things to learn and gorw. 
+	</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
